# chatgpt-talk

./: README.md  pyproject.toml  voice_chatgpt_macos.py  voice_recorder.py
