[tool.poetry]
name = "chatgpt-talk"
version = "0.1.0"
description = ""
authors = ["mitch <benq7879@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_talk"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
PyAudio = "^0.2.13"
SpeechRecognition = "^3.10.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
