[tool.poetry]
name = "chatgpt-talk"
version = "0.1.0"
description = ""
authors = ["mitch <benq7879@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_talk"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
SpeechRecognition = "^3.10.0"
requests = "^2.28.2"
sounddevice = "^0.4.6"
numpy = "^1.24.2"
gtts = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
